<resources>
    <string name="app_name">Sensor App</string>
    <string name="action_settings">Settings</string>
    <string name="stop_btn">Stop</string>
    <string name="start_btn">Start</string>
    <string name="x_cordinate">X</string>
    <string name="y_cordinate">Y</string>
    <string name="z_cordiate">Z</string>
    <string name="blank_label">0</string>
    <string name="title">Accelerometer Reading</string>
</resources>
