<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="56dp"
    tools:showIn="@layout/activity_main" >

    <Button
        android:id="@+id/btn_start"
        android:layout_width="120dp"
        android:layout_height="64dp"
        android:layout_marginStart="125dp"
        android:layout_marginBottom="28dp"
        android:onClick="onClickStart"
        android:text="@string/start_btn"
        app:layout_constraintBottom_toTopOf="@+id/btn_stop"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_stop"
        android:layout_width="120dp"
        android:layout_height="64dp"
        android:layout_marginStart="125dp"
        android:layout_marginBottom="46dp"
        android:onClick="onClickStop"
        android:text="@string/stop_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/lbl_x"
        android:layout_width="145dp"
        android:layout_height="24dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="96dp"
        android:text="@string/blank_label"
        app:layout_constraintStart_toEndOf="@+id/txt_x"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbl_y"
        android:layout_width="145dp"
        android:layout_height="24dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="48dp"
        android:text="@string/blank_label"
        app:layout_constraintStart_toEndOf="@+id/txt_y"
        app:layout_constraintTop_toBottomOf="@+id/lbl_x" />

    <TextView
        android:id="@+id/lbl_z"
        android:layout_width="145dp"
        android:layout_height="24dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="44dp"
        android:text="@string/blank_label"
        app:layout_constraintStart_toEndOf="@+id/txt_z"
        app:layout_constraintTop_toBottomOf="@+id/lbl_y" />

    <TextView
        android:id="@+id/txt_x"
        android:layout_width="18dp"
        android:layout_height="21dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="96dp"
        android:text="@string/x_cordinate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_y"
        android:layout_width="18dp"
        android:layout_height="21dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="52dp"
        android:text="@string/y_cordinate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_x" />

    <TextView
        android:id="@+id/txt_z"
        android:layout_width="18dp"
        android:layout_height="21dp"
        android:layout_marginStart="68dp"
        android:layout_marginTop="47dp"
        android:text="@string/z_cordiate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_y" />

    <TextView
        android:id="@+id/title_sensor1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginBottom="59dp"
        android:text="@string/title"
        app:layout_constraintBottom_toTopOf="@+id/lbl_x"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>